# Depin-Energy-Marketplace

./: README.md  package.json
.git_backup/: config  index
.git_backup/logs/: HEAD
.git_backup/logs/refs/heads/: main
.git_backup/logs/refs/remotes/origin/: main
.git_backup/refs/remotes/origin/: main
App/: .gitignore  package-lock.json
App/apps/api/: index.ts  package.json
App/apps/api/src/: index.ts
App/apps/api/src/routes/: energylisting.router.ts  user.router.ts
App/contracts/anchor/: Anchor.toml  package-lock.json
App/contracts/anchor/programs/anchor/src/: lib.rs
App/contracts/energytrade/: Anchor.toml  package-lock.json
App/contracts/energytrade/programs/energytrade/: .gitignore  Cargo.toml
App/contracts/energytrade/programs/energytrade/src/: lib.rs
App/contracts/energytrade/tests/: energytrade.ts
