[package]
name = "energytrade"
version = "0.1.0"
description = "DePIN Energy Trading Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "energytrade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
